Revert "check in idea"
This reverts commit 1da7ef7d928ca3e2951e5a775036da40edef156e.

--- a/app/views/homes/_show.js.erb
+++ b/app/views/homes/_show.js.erb
@@ -1,21 +1,1 @@
-BigEye = {
-    init : function() {
-        alert("test this yoyo!!");
-    },
-
-    bigeasy : function() {
-        var self = this;
-        $('*').each(function(){
-            $(this).draggable();
-        });
-    },
-
-    bigdraggable : function() {
-        var self = this;
-        $('*').each(function(){
-            $(this).draggable();
-        });
-    }
-};
-
-BigEye.bigeasy();
+alert("i am watching you!!");
